# slo-weather

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  scrape.py
.github/workflows/: main.yml
data/: .gitignore  example.xml
data_pipeline/: 01_insert_stations.py  02_parse_meteo_data_archive.py  03_parse_meteo_data_archive_in_memory.py  db.py  jsonl_util.py  models.py  parsing_util.py  paths_util.py  schema_01_stations.sql  schema_02_datapoint.sql  test_parsing_util.py
go_data_pipeline/: cpu.prof  go.mod  go.sum  main.go  main_test.go
java_data_pipeline/: pom.xml
java_data_pipeline/src/main/java/si/drola/adventofcode2024/: Coordinates.java  ExportedDataShape.java  Main.java  MetDataPoint.java  ParsedFile.java  Station.java
rust_data_pipeline/: .gitignore  Cargo.toml
rust_data_pipeline/src/: main.rs
scraper/: items.py  settings.py  test_waters_parsing_util.py  util.py  waters_parsing_util.py
scraper/examples/: buoy_data.html  buoy_data_v2.html  river_data.html
scraper/spiders/: meteo_data_spider.py  stations_spider.py  waters_spreadsheet_1day.py  waters_spreadsheet_30day.py  waters_spreadsheet_base.py  weather_stations_spider.py
