[tool.poetry]
name = "slo-weather"
version = "0.1.0"
description = ""
authors = ["Matjaž Drolc <mdrolc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.0"
parsel = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
