[tool.poetry]
name = "slo-weather"
version = "0.1.0"
description = ""
authors = ["Matjaž Drolc <mdrolc@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [
    { include = "data_pipeline", from="*" }
]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "2.11.2"
parsel = "^1.8.1"
psycopg = "^3.1.12"
pydantic = "^2.5.1"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
