[package]
name = "rust_data_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.37.2", features = ["serialize"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.40", features = ["serde", "serde-well-known", "macros"] }
rayon = { version = "1.8" }
csv = { version = "^1.3" }
